--- a/gui/ui/main_window.ui
+++ b/gui/ui/main_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1281</width>
-    <height>716</height>
+    <width>1260</width>
+    <height>571</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -203,6 +203,16 @@
                <attribute name="verticalHeaderDefaultSectionSize">
                 <number>34</number>
                </attribute>
+               <row>
+                <property name="text">
+                 <string>New Row</string>
+                </property>
+               </row>
+               <row>
+                <property name="text">
+                 <string>New Row</string>
+                </property>
+               </row>
                <column>
                 <property name="text">
                  <string>Number</string>
@@ -321,7 +331,7 @@ border-color: rgb(255, 170, 0);</string>
            <item row="0" column="0" colspan="3">
             <widget class="QLabel" name="label">
              <property name="text">
-              <string>TextLabel</string>
+              <string>CharacterName</string>
              </property>
             </widget>
            </item>
@@ -454,11 +464,11 @@ border-color: rgb(255, 170, 0);</string>
               </size>
              </property>
              <property name="text">
-              <string>Crea Nuovo</string>
+              <string>   Aggiungi</string>
              </property>
              <property name="icon">
-              <iconset>
-               <normaloff>:/Icons/img/plus.png</normaloff>:/Icons/img/plus.png</iconset>
+              <iconset resource="../res/res_rc.qrc">
+               <normaloff>:/Icons/plus.png</normaloff>:/Icons/plus.png</iconset>
              </property>
             </widget>
            </item>
@@ -528,19 +538,105 @@ border-color: rgb(255, 170, 0);</string>
          </widget>
          <widget class="QWidget" name="tab_2">
           <property name="styleSheet">
-           <string notr="true">border-radius: 10px;
-background-color: rgb(255, 255, 255);
-border: 3px solid;
-border-color: rgb(255, 170, 0);</string>
+           <string notr="true">
+</string>
           </property>
           <attribute name="title">
            <string>Creature</string>
           </attribute>
+          <layout class="QGridLayout" name="gridLayout_7">
+           <item row="0" column="0" colspan="2">
+            <widget class="QListWidget" name="listWidget_2"/>
+           </item>
+           <item row="1" column="0">
+            <spacer name="horizontalSpacer_13">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeType">
+              <enum>QSizePolicy::Expanding</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>147</width>
+               <height>21</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item row="1" column="1">
+            <widget class="QPushButton" name="pushButton_5">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>120</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>   Aggiungi</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../res/res_rc.qrc">
+               <normaloff>:/Icons/plus.png</normaloff>:/Icons/plus.png</iconset>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </widget>
          <widget class="QWidget" name="tab_3">
           <attribute name="title">
            <string>Crea Nuovo</string>
           </attribute>
+          <layout class="QGridLayout" name="gridLayout_8">
+           <item row="0" column="0">
+            <widget class="QPushButton" name="createNew">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>150</width>
+               <height>100</height>
+              </size>
+             </property>
+             <property name="font">
+              <font>
+               <family>Segoe UI</family>
+               <weight>50</weight>
+               <italic>false</italic>
+               <bold>false</bold>
+               <strikeout>false</strikeout>
+               <kerning>true</kerning>
+              </font>
+             </property>
+             <property name="autoFillBackground">
+              <bool>false</bool>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">border-radius: 10px;
+background-color: rgb(255, 255, 255);
+border: 3px solid;
+border-color: rgb(255, 170, 0);</string>
+             </property>
+             <property name="text">
+              <string>   Crea Nuovo</string>
+             </property>
+             <property name="icon">
+              <iconset resource="../res/res_rc.qrc">
+               <normaloff>:/Icons/plus.png</normaloff>:/Icons/plus.png</iconset>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </widget>
         </widget>
        </item>
@@ -554,7 +650,7 @@ border-color: rgb(255, 170, 0);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1281</width>
+     <width>1260</width>
      <height>21</height>
     </rect>
    </property>
@@ -562,6 +658,13 @@ border-color: rgb(255, 170, 0);</string>
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionNuovo"/>
+    <addaction name="actionApri"/>
+    <addaction name="separator"/>
+    <addaction name="actionSalva"/>
+    <addaction name="actionSalva_Come"/>
+    <addaction name="separator"/>
+    <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuImpostazioni">
     <property name="title">
@@ -578,6 +681,31 @@ border-color: rgb(255, 170, 0);</string>
    <addaction name="menuAbout"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionApri">
+   <property name="text">
+    <string>Open</string>
+   </property>
+  </action>
+  <action name="actionNuovo">
+   <property name="text">
+    <string>New</string>
+   </property>
+  </action>
+  <action name="actionSalva">
+   <property name="text">
+    <string>Save</string>
+   </property>
+  </action>
+  <action name="actionSalva_Come">
+   <property name="text">
+    <string>Save As</string>
+   </property>
+  </action>
+  <action name="actionExit">
+   <property name="text">
+    <string>Exit</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="../res/res_rc.qrc"/>
