--- a/gui/ui/main_window.ui
+++ b/gui/ui/main_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1260</width>
-    <height>571</height>
+    <width>1460</width>
+    <height>714</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -51,7 +51,7 @@
         <widget class="QWidget" name="widget_3" native="true">
          <property name="minimumSize">
           <size>
-           <width>600</width>
+           <width>800</width>
            <height>0</height>
           </size>
          </property>
@@ -59,6 +59,18 @@
           <string notr="true"/>
          </property>
          <layout class="QGridLayout" name="gridLayout_5">
+          <property name="leftMargin">
+           <number>6</number>
+          </property>
+          <property name="topMargin">
+           <number>6</number>
+          </property>
+          <property name="rightMargin">
+           <number>6</number>
+          </property>
+          <property name="bottomMargin">
+           <number>6</number>
+          </property>
           <item row="0" column="0">
            <widget class="QFrame" name="frame_2">
             <property name="frameShape">
@@ -68,6 +80,18 @@
              <enum>QFrame::Raised</enum>
             </property>
             <layout class="QGridLayout" name="gridLayout_4">
+             <property name="leftMargin">
+              <number>6</number>
+             </property>
+             <property name="topMargin">
+              <number>6</number>
+             </property>
+             <property name="rightMargin">
+              <number>6</number>
+             </property>
+             <property name="bottomMargin">
+              <number>6</number>
+             </property>
              <item row="0" column="0">
               <layout class="QHBoxLayout" name="horizontalLayout">
                <item>
@@ -200,22 +224,15 @@
              </item>
              <item row="1" column="0">
               <widget class="QTableWidget" name="tableWidget">
+               <attribute name="horizontalHeaderDefaultSectionSize">
+                <number>100</number>
+               </attribute>
                <attribute name="verticalHeaderDefaultSectionSize">
                 <number>34</number>
                </attribute>
-               <row>
-                <property name="text">
-                 <string>New Row</string>
-                </property>
-               </row>
-               <row>
-                <property name="text">
-                 <string>New Row</string>
-                </property>
-               </row>
                <column>
                 <property name="text">
-                 <string>Number</string>
+                 <string>Initiative</string>
                 </property>
                </column>
                <column>
@@ -230,7 +247,22 @@
                </column>
                <column>
                 <property name="text">
-                 <string>Armorer Class</string>
+                 <string>Arm Class</string>
+                </property>
+               </column>
+               <column>
+                <property name="text">
+                 <string>CD Spells</string>
+                </property>
+               </column>
+               <column>
+                <property name="text">
+                 <string>Adv</string>
+                </property>
+               </column>
+               <column>
+                <property name="text">
+                 <string>Disadv</string>
                 </property>
                </column>
               </widget>
@@ -450,7 +482,7 @@ border-color: rgb(255, 170, 0);</string>
           </attribute>
           <layout class="QGridLayout" name="gridLayout_6">
            <item row="1" column="2">
-            <widget class="QPushButton" name="pushButton_4">
+            <widget class="QPushButton" name="push_character_add">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
@@ -521,7 +553,7 @@ border-color: rgb(255, 170, 0);</string>
             </spacer>
            </item>
            <item row="1" column="1">
-            <widget class="QPushButton" name="pushButton_5">
+            <widget class="QPushButton" name="push_creature_add">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
@@ -606,7 +638,7 @@ border-color: rgb(255, 170, 0);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1260</width>
+     <width>1460</width>
      <height>26</height>
     </rect>
    </property>
